<resources>
    <string name="app_name">Apostolic Songs</string>
    <string name="action_settings">Settings</string>
    <string name="SongSelect">Songs</string>
    <string name="hello_blank_fragment">New Fragment Hello World</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="vers_for_intro">ሰዎች የዘመሩትን ሥራውን ታከብር ዘንድ አስብ።</string>
    <string name="verus_no_for_intro">ኢዮብ 36:24</string>
    <string name="copyright_for_intro_page">2016 Apostolic Church of Ethiopia\n All rights reserved</string>
    <string name="navBar_songs_of_zion">የጽዮን መዝሙሮች</string>
    <string name="navBar_songs">መዝሙሮች</string>
    <string name="navBar_Albums">አልበሞች</string>
    <string name="navBar_Artists">ዘማሪዎች</string>
    <string name="contentDescforAbtPage">about the app image</string>
    <string name="apostlic_songs">Apostolic Songs</string>
    <string name="developer">Developer</string>
    <string name="menasi_ephrem">Menasi Ephrem</string>
    <string name="graphic_designer">Graphic Designer</string>
    <string name="miya">Eshcol Teferra</string>
    <string name="lyric">Lyric</string>
    <string name="dani_b">Daniel Berhanu</string>
    <string name="not_usa_meklit">North America Youth Meklit</string>
    <string name="app_web">apostolicsongs.ml</string>
    <string name="version">Apostolic Songs 2.3</string>
    <string name="hint">በመዝሙር ርዕስ ይፈልጉ</string>
    <string name="action_search">ፈልግ</string>
    <string name="textSize">የፅሁፍ መጠን</string>
    <string name="text_size_big">ትልቅ</string>
    <string name="text_size_mid">መካከለኛ</string>
    <string name="text_size_small">ትንሽ</string>
    <string name="settings">መቼት</string>
    <string name="url">http://178.62.247.200:5400</string>
    <string name="path">/Apostolic Songs/Album Arts/</string>
    <string name="about_us_page">About Us Page</string>
    <string name="privacy_policy">privacy policy</string>


</resources>
